--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
+    "notyf": "^3.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
