--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,9 +16,11 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "jwt-decode": "^3.1.2",
     "notyf": "^3.10.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0",
